backend_routes_billing_check.log
/Users/karthikj/Desktop/questronthemeclone/questron-backend/src/modules/billing/api/billing.routes.ts:6
import { authenticate } from '../../auth/auth.middleware.js';
         ^

SyntaxError: The requested module '../../auth/auth.middleware.js' does not provide an export named 'authenticate'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:182:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:265:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:600:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:98:5)

Node.js v23.9.0
